# dcstad

./: .gitignore  Makefile.hostexample  Makefile.in  README  config.h.in  configure  configure.ac  dcstad-script-api.txt
scripts/: dcstad-envdump.sh  dcstad-iwconfig.sh  dcstad-osx-connect-datachan.sh  dcstad-rpi.sh  dcstad-simulator.sh  rpi-dcjoin.sh  test-simulator.sh
src/: Makefile.am  Makefile.in  dcstad_config.h  dcw_transaction.c  dcw_transaction.h  dcwlog.h  event_waiter.c  event_waiter.h  main.c  script_invoker.c  script_invoker.h  signaling.c  signaling.h
